# meal_sharing_legend

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
include/: bc_box_bundle.h  bundle.h  cola_bundle.h  cursor_mgr.h  delivery_driver.h  mb_box_bundle.h  meal.h  microwave_oven.h  rcp_box_bundle.h  region.h  region_mgr.h  res_mgr.h  sprite_bundle.h  takeout_box.h  tb_bundle.h  timer.h
source/: bc_box_bundle.cpp  bundle.cpp  cola_bundle.cpp  cursor_mgr.cpp  delivery_driver.cpp  main.cpp  mb_box_bundle.cpp  microwave_ove,.cpp  microwave_ove.cpp  rcp_box_bundle.cpp  region_mgr.cpp  res_mgr.cpp  resource.rc  sprite_bundle.cpp  takeout_box.cpp  tb_bundle.cpp
